[package]
name = "url_shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
config-file = "0.2.3"
csv = "1.4.0"
hex = "0.4.3"
inquire = "0.9.4"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
strum = "0.28.0"
strum_macros = "0.28.0"
